# auroralink

./: DESIGN_INTENT.md  DOCUMENTATION.md  EgdSend  EgdSend.c  EgdTest.h  KR260_Aurora_FIFO_Pattern_Generator_Guide.docx  KR260_auroralink_hindi.md  detailed_explaination_hindi.md
docs/: BRIDGE_SOFTWARE_DESIGN.md  MILESTONE_2_TASKS.md
docs/milestone2/: M2-A_TASK.md  M2-B_TASK.md  M2-C_TASK.md  M2-D_TASK.md  README.md
explanation_docs/: M2-Adeepdive.md  M2a_hindi_explaination2.md  M2a_hindi_explaination_resolved.md  detailed_explanation.md  explaination.md
libEGD-master/: CMakeLists.txt  DG_EGD.xml  EGD_OUT.xml  Jenkinsfile  Makefile  README.md  test-server.sh
libEGD-master/doc/: Doxyfile
libEGD-master/hack/: build.sh  coverage.sh  create-github-release.sh  docs.sh  package-deb.sh  scan.sh  test.sh
libEGD-master/hack/docker/: Dockerfile.builder  Dockerfile.dev  Dockerfile.in
libEGD-master/src/: Makefile
libEGD-master/src/egd/client/: egd_client.cpp  egd_client.h  egd_client.hpp  json_client.cpp  json_client.h  json_client.hpp
libEGD-master/src/egd/config/: consumer_config.cpp  consumer_config.h  consumer_config.hpp  egd_config.cpp  egd_config.h  egd_config.hpp  producer_config.cpp  producer_config.h  producer_config.hpp
libEGD-master/src/egd/util/: egd_spec.h  egd_status.cpp  egd_status.h
libEGD-master/src/examples/: json_publish.c  json_publish.cpp  json_subscribe.c  json_subscribe.cpp  list_available_pages.cpp  raw_bytes_publish.c  raw_bytes_publish.cpp  raw_bytes_subscribe.c  raw_bytes_subscribe.cpp
